[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-api-ai"
version = "4.0.0"
description = "Mobile API AI Service"
requires-python = ">=3.10"
authors = [
    {name = "Mobile API AI Team"},
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".."]
addopts = []

[tool.coverage.run]
source = ["api", "models", "storage_mysql"]
omit = ["*/tests/*", "*/migrations/*", "*/scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
